--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ for (int i = 0; i &lt s.length; i = i + 1) { print s.s[i]; }
 									<form action="https://formsubmit.co/adilapriyadi@yahoo.com.sg" method="POST">
 									<div class="fields">
 										<input type="hidden" name="_subject" value="New Portfolio Contact Form Message">
-										<input type="hidden" name="_next" value="http://127.0.0.1:5500/#contactthankyou">
+										<input type="hidden" name="_next" value="https://rifqiadlanapriyadi.github.io/#contactthankyou">
 										<div class="field half">
 											<label for="name">Name</label>
 											<input type="text" name="name" id="name" required>
@@ -345,7 +345,7 @@ for (int i = 0; i &lt s.length; i = i + 1) { print s.s[i]; }
 								<form action="https://formsubmit.co/adilapriyadi@yahoo.com.sg" method="POST">
 								<div class="fields">
 									<input type="hidden" name="_subject" value="New Portfolio Contact Form Message">
-									<input type="hidden" name="_next" value="http://127.0.0.1:5500/#contactthankyou">
+									<input type="hidden" name="_next" value="https://rifqiadlanapriyadi.github.io/#contactthankyou">
 									<div class="field half">
 										<label for="name">Name</label>
 										<input type="text" name="name" id="name" required>
