Changed email address

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ for (int i = 0; i &lt s.length; i = i + 1) { print s.s[i]; }
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<!-- <form method="post" action="#"> -->
-									<form action="https://formsubmit.co/adilapriyadi@yahoo.com.sg" method="POST">
+									<form action="https://formsubmit.co/00f18bae57abd24dc08eaa3128c18a0f" method="POST">
 									<div class="fields">
 										<input type="hidden" name="_subject" value="New Portfolio Contact Form Message">
 										<input type="hidden" name="_next" value="https://rifqiadlanapriyadi.github.io/#contactthankyou">
@@ -342,7 +342,7 @@ for (int i = 0; i &lt s.length; i = i + 1) { print s.s[i]; }
 								<!-- TODO: Thank you snackbar -->
 								<div id="snackbar">Your message has been sent.</div>
 
-								<form action="https://formsubmit.co/adilapriyadi@yahoo.com.sg" method="POST">
+								<form action="https://formsubmit.co/00f18bae57abd24dc08eaa3128c18a0f" method="POST">
 								<div class="fields">
 									<input type="hidden" name="_subject" value="New Portfolio Contact Form Message">
 									<input type="hidden" name="_next" value="https://rifqiadlanapriyadi.github.io/#contactthankyou">
