Added the LinkedIn icon to the top.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 								<h1>Rifqi Adlan Apriyadi</h1>
 								<!-- <p>A Master's student at the Tokyo Institute of Technology with passion in</br>Game Development, Programming Languages, and everything Computer Science.</p> -->
 								<p>A Master's student at the Tokyo Institute of Technology researching Programming Languages and Software</br>Development Environments with a passion in Game Development, Emebbed Systems, and everything Computer Science.</p>
+								<ul class="icons">
+									<li><a href="https://www.linkedin.com/in/rifqi-adlan-apriyadi-987670150/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								</ul>
 							</div>
 						</div>
 						<nav>
