--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<p>My major encourages and facilitates the exploration of real-world problems in the realm of computer science and the proposal of a solution with the assistance of mathematical theories. My research field is in Programming Languages and Software Development Environments. It is the field that discusses the improvement of the programming experience, both in the workings of programming languages and in the tools and environments programmers use to write in these languages. My research interest here is currently on "Visual Debuggers with a Customizable View".</p> -->
 								<ul>
 									<li>Researching Programming Languages and Software Development Environment</li>
-									<li>Current research topic is <a href="#research">Visual Debugger with a Customizable View</a></li>
+									<li>Current research topic is <a href="#research">JIGSAW: Visual Debugger with a Customizable View</a></li>
 									<li>Active in the Tokyo Tech International Students Association (TISA)</li>
 									<li>Expected graduation in September 2023</li>
 								</ul>
@@ -98,10 +98,11 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 
-								<h3 class="major">Visual Debugger with a Customizable View</h3>
+								<h3 class="major">JIGSAW: Visual Debugger with a Customizable View</h3>
 								<h4>September 2021 - Present</h4>
 								<p>A debugger is a computer program used by programmers to test and help find mistakes (bugs) in the program they are currently writing. It allows programmers to see the state of the program in a step-by-step manner. However, once programs are large enough, the states become difficult to understand, especially since most debuggers do not provide any graphical visualizations to help the programmers in this effort. Moreover, another problem arises when programmers would like to customize these visualizations to better understand the states according to their conventions.</p>
 								<p>This research aims to propose a solution to these two problems. It aims to investigate and execute the approaches for the development of a debugger with intuitive, convenient, and easy-to-understand visualizations. On top of that — and by far the most challenging part — it also aims to make this visualization customizable according to the programmer's liking.</p>
+								<span class="image main"><img src="images/Projects/JIGSAW.png" alt="" /></span>
 								<p>I chose this topic because similar projects have not seemed to have accomplished this view customizabiliy feature. Additionally, I am also motivated by my personal experience with debuggers in this area. Finally, since this is new territory for me, I would learn lots of new technologies and concepts in this research, including the workings of programming languages, the development of a programming tool, and the makings of intuitive user interfaces in the debugger's front-end.</p>
 
 								<h4 class="major">MODEST Language Syntax for Structural Model Parameters</h4>
