--- a/index.html
+++ b/index.html
@@ -333,6 +333,9 @@ for (int i = 0; i &lt s.length; i = i + 1) { print s.s[i]; }
 								<li>The user could further customize the view</li>
 								<li>The most notable customization is manipulating regions, where users could either refine or combine</li>
 							</ul>
+
+							<h3 style="border-bottom: solid 1px #ffffff;padding-bottom: 0.5rem;margin: 0 0 2rem 0;">Research Projects</h3>
+							<p>Research projects can be viewed <a href="#research">here</a>.</p>
 							
 						</article>
 
