Add "how to" for custom icons

--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@ par {
 							</article>
 
 						<!-- skills -->
+						<!-- How to add icon:
+							1. Get PNG of icon (monocolor)
+							2. Shrink png to max 45 width/height
+							3. Convert PNG to SVG (e.g. convertio.co)
+							4. If more than one path in SVG, combine to one path
+							5. Paste path to fa-brands-400.svg (a new entry with new glpyh-name and unicode)
+							6. Add new entry in fontawesome-all.min.css with new glpyh-name and unicode
+							7. Generate .ttf, .eot, .woff, and .woff2 files of fa-brands-400.svg files
+							8. Use these generated files to replace their old counterparts -->
+
 							<article id="skills">
 								<h2 class="major">Skills</h2>
 								<h3 class="major">Fields</h3>
